# LibSOFL

./: .gitignore  .gitmodules  Cargo.toml  DEV.md  README.md  Taskfile.yaml  build.rs  config.exmple.toml  docker-compose.yml  rustfmt.toml  tmp.txt  token.rs
.github/workflows/: format.yml  test.yml
assets/: erc1155.abi.json  inverse_lending_comptroller.abi.json
assets/abi/: curve_exchange.abi.json  erc4626.abi.json
assets/test/: yvcrv3cryptofeed.abi.json
benches/: bench_main.rs
benches/benchmarks/: extract_call.rs  mod.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs
crates/analysis/src/taint/: call.rs  inspector.rs  memory.rs  mod.rs  policy.rs  stack.rs  storage.rs
crates/analysis/src/taint/policy/: arithmetic.rs  bitwise.rs  call.rs  env.rs  execution.rs  host.rs  host_env.rs  math.rs  mod.rs  nested_call.rs  system.rs
crates/analysis/src/taint/propagation/: call.rs  env.rs  execution.rs  math.rs  mod.rs  nested_call.rs
crates/analysis/src/taint/sink/: mod.rs  tx_output.rs
crates/analysis/src/taint/source/: mod.rs  tx_input.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs
crates/core/src/blockchain/: mod.rs  provider.rs  transaction.rs  tx_position.rs
crates/core/src/conversion/: mod.rs  revm.rs  uint.rs
crates/core/src/engine/: inspector.rs  memory.rs  mod.rs  revm.rs  state.rs  transition.rs  types.rs
crates/core/src/engine/interruptable/: breakpoint.rs  differential_testing.rs  evm.rs  execution.rs  mod.rs  tests.rs
crates/core/src/engine/interruptable/serde_helpers/: interpreter.rs  mod.rs  revm.rs  tests.rs
crates/core/src/solidity/: caller.rs  scripting.rs
crates/fuzzy/: Cargo.toml  README.md
crates/fuzzy/src/: fuzzer.rs  lib.rs  state.rs
crates/fuzzy/src/blockchain/: mod.rs  state_ref.rs
crates/fuzzy/src/executor/: call_executor.rs  evm.rs  mod.rs
crates/fuzzy/src/ingredient/: mod.rs  pentry.rs  primitive.rs
crates/fuzzy/src/input/: call.rs  calldata.rs  mod.rs  tx.rs
crates/fuzzy/src/state/: mod.rs
crates/jsonrpc/: Cargo.toml
crates/jsonrpc/src/: blockchain.rs  config.rs  lib.rs  provider.rs  state.rs
crates/knowledge/: Cargo.toml
crates/knowledge/base/: Cargo.toml
crates/knowledge/base/src/: config.rs  lib.rs  rpc.rs  service.rs
crates/knowledge/base/src/entities/: metadata.rs
crates/knowledge/code/: Cargo.toml
crates/knowledge/code/src/: config.rs  error.rs  lib.rs
crates/knowledge/code/src/collect/: collector.rs  contract_inspector.rs  fetcher.rs  mod.rs
crates/knowledge/code/src/entities/: code.rs
crates/knowledge/code/src/query/: fetcher.rs  mod.rs  query.rs
crates/knowledge/code/src/rpc/: mod.rs  service.rs
crates/knowledge/index/: Cargo.toml
crates/knowledge/index/src/: lib.rs  testing.rs
crates/knowledge/index/src/entities/: creation.rs  invocation.rs  mod.rs
crates/knowledge/index/src/inspectors/: extract_creation.rs  extract_invocation.rs
crates/knowledge/index/src/rpc/: mod.rs  service.rs
crates/knowledge/migration/: Cargo.toml
crates/knowledge/migration/src/: create_metadata.rs  main.rs  source_code.rs  tx_index.rs
crates/knowledge/service/: Cargo.toml
crates/knowledge/service/src/: lib.rs
crates/knowledge/src/: config.rs  lib.rs  testing.rs
crates/knowledge/src/entities/: creation.rs  invocation.rs  mod.rs
crates/knowledge/src/inspectors/: extract_creation.rs  extract_invocation.rs  mod.rs
crates/periphery/: Cargo.toml
crates/periphery/src/: addressbook.rs  caller.rs  conversion.rs  lib.rs  math.rs  test.rs  types.rs
crates/periphery/src/cheatcodes/: contract_type.rs  inspector.rs  mod.rs  price_oracle.rs
crates/periphery/src/cheatcodes/erc20/: dex_lp.rs  mod.rs  pegged_token.rs  standard.rs
crates/reth/: .gitignore  Cargo.toml  README.md
crates/reth/benches/performance/: main.rs
crates/reth/src/: config.rs  differential_testing.rs  lib.rs
crates/reth/src/blockchain/: mod.rs  provider.rs  state.rs  transaction.rs
crates/reth/src/conversion/: mod.rs  reth.rs  uint.rs
crates/utils/: Cargo.toml
crates/utils/src/: config.rs  lib.rs  rate_limit.rs
crates/utils/src/log/: config.rs  mod.rs
crates/utils/src/solidity/: caller.rs  mod.rs  scripting.rs
crates/utils/src/sync/: mod.rs  runtime.rs
src/: error.rs  lib.rs  main.rs
src/config/: flags.rs  mod.rs
src/engine/: builders.rs  config.rs  executor.rs  fuzzer.rs  mod.rs  provider.rs  transaction.rs  utils.rs
src/engine/actions/: mod.rs  swap.rs
src/engine/cheatcodes/: contract_type.rs  erc20.rs  inspector.rs  mod.rs  price_oracle.rs
src/engine/cheatcodes/erc20/: dex_lp.rs  mod.rs  pegged_token.rs  standard_erc20.rs
src/engine/executors/: fork.rs  mod.rs
src/engine/inspectors/: asset_flow.rs  call_extract.rs  combined.rs  mod.rs  money_flow.rs  static_call.rs
src/engine/providers/: mod.rs  reth.rs  rpc.rs
src/engine/state/: env.rs  fork.rs  fresh.rs  mod.rs  state.rs
src/engine/transactions/: builder.rs  mod.rs  position.rs
src/etherscan/: mod.rs
src/fuzzing/: interfaces.rs  mod.rs
src/fuzzing/corpus/: mod.rs  mono_seq.rs  raw_tx.rs  seq.rs  structured_tx.rs  tx.rs
src/fuzzing/executor/: evm.rs  mod.rs  mono_seq.rs  pom.rs  seq.rs  tx.rs
src/fuzzing/executor/utils/: mod.rs
src/fuzzing/executor/utils/contract_matching/: mod.rs  uniswap_v2.rs  uniswap_v3.rs
src/fuzzing/feedback/: always.rs  assert.rs  mod.rs  never.rs
src/fuzzing/generator/: history_tx.rs  mod.rs  structured.rs
src/fuzzing/observer/: asset_flow.rs  mod.rs  result.rs  trace.rs
src/fuzzing/state/: fixed.rs  mod.rs  stateless.rs
src/knowledge/: mod.rs
src/knowledge/contract/: abi.rs  mod.rs  msg_call.rs
src/knowledge/contract/entities/: contract.rs  creation.rs  invocation.rs  mod.rs
src/knowledge/entities/: metadata.rs
src/poc/: ethers.rs  evm.rs  mod.rs
src/pom/: mod.rs
src/utils/: abi.rs  addresses.rs  cheatcodes.rs  conversion.rs  math.rs  mod.rs  solidity.rs  testing.rs
tests/data/: test_config.toml
