[workspace.package]
version = "0.1.0"
authors = ["William Aaron Cheung, Zhuo Zhang"]
description = "Smart contract Ops Fuzzy Library"
homepage = "https://github.com/Troublor/LibSOFL"
rust-version = "1.74"
license = "MIT"
edition = "2021"

[workspace]
members = [
    "crates/core",
    "crates/reth",
    "crates/utils",
    "crates/periphery",
    "crates/jsonrpc",
    "crates/knowledge",
    "crates/analysis",
]

[workspace.dependencies]
# libsofl 
libsofl-core = { path = "crates/core" }
libsofl-utils = { path = "crates/utils" }
libsofl-periphery = { path = "crates/periphery" }
libsofl-knowledge = { path = "crates/knowledge" }
libsofl-jsonrpc = { path = "crates/jsonrpc" }
libsofl-reth = { path = "crates/reth" }

# utils
auto_impl = "1.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"

# async 
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# database
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "mock",
    "debug-print",
] }
sea-orm-migration = { version = "^0" }

# log 
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "json",
    "env-filter",
] }

# serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.102"

# test dependencies
mockall = "0.12.0"

# alloy core
alloy-primitives = "0.5.4"
alloy-sol-types = "0.5.3"
alloy-sol-macro = { version = "0.5.3", features = ["json"] }
alloy-dyn-abi = "0.5.3"
alloy-json-abi = "0.5.3"

# alloy
alloy-providers = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }


# revm
revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = [
    "std",
    "secp256k1",
    "serde",
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
], default-features = false }
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = [
    "std",
    "serde",
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
], default-features = false }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8", features = [
    "arbitrary",
] }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8", features = [
    "mdbx",
    "test-utils",
] }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8", features = [
    "test-utils",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", rev = "cd08ba8" }
