[workspace.package]
version = "0.1.0"
authors = ["William Aaron Cheung, Zhuo Zhang"]
description = "Smart contract Ops Fuzzy Library"
homepage = "https://github.com/Troublor/LibSOFL"
rust-version = "1.74"
license = "MIT"
edition = "2021"

[workspace]
members = [
    "crates/core",
    "crates/reth",
    "crates/utils",
    "crates/periphery",
    "crates/jsonrpc",
    "crates/knowledge/base",
    "crates/knowledge/index",
    "crates/analysis",
    "crates/knowledge/code",
    "crates/knowledge/migration",
]
resolver = "2"

[workspace.dependencies]
# libsofl
libsofl-core = { path = "crates/core" }
libsofl-utils = { path = "crates/utils" }
libsofl-periphery = { path = "crates/periphery" }
libsofl-knowledge-base = { path = "crates/knowledge/base" }
libsofl-knowledge-index = { path = "crates/knowledge/index" }
libsofl-knowledge-code = { path = "crates/knowledge/code" }
libsofl-jsonrpc = { path = "crates/jsonrpc" }
libsofl-reth = { path = "crates/reth" }
libsofl-analysis = { path = "crates/analysis" }

# utils
auto_impl = "1.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"

# async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
futures = { version = "0.3", features = ["default", "thread-pool"] }

# concurrency
crossbeam = "0.8"
crossbeam-utils = "0.8"

# database
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "mock",
    "debug-print",
] }
sea-orm-migration = { version = "^0" }

# log
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "json",
    "env-filter",
] }

# serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.102"

# test dependencies
mockall = "0.12.0"

# alloy core
alloy-primitives = { version = "0.6", features = ["rlp"] }
alloy-sol-types = "0.6"
alloy-sol-macro = { version = "0.6", features = ["json"] }
alloy-dyn-abi = "0.6"
alloy-json-abi = "0.6"

alloy-chains = "0.1"

# alloy
alloy-providers = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }


# revm
# revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = [
#     "std",
#     "secp256k1",
#     "serde",
#     "memory_limit",
#     "optional_balance_check",
#     "optional_block_gas_limit",
#     "optional_eip3607",
#     "optional_gas_refund",
#     "optional_no_base_fee",
# ], default-features = false }
# revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = [
#     "std",
#     "serde",
#     "memory_limit",
#     "optional_balance_check",
#     "optional_block_gas_limit",
#     "optional_eip3607",
#     "optional_gas_refund",
#     "optional_no_base_fee",
# ], default-features = false }
# revision as of 2024-01-25
revm = { git = "https://github.com/bluealloy/revm", rev = "73b689d04f70187241577def1b34b40eb6906a17", features = [
    "std",
    "serde",
    "dev",
] }
revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "73b689d04f70187241577def1b34b40eb6906a17", features = [
    "std",
    "serde",
    "dev",
] }

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.16", features = [
    "arbitrary",
] }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.16", features = [
    "mdbx",
    "test-utils",
] }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.16", features = [
    "test-utils",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.16" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.16" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.16" }

# Workaround for reth dependency disorder
# override the revm-inspector dependency to revision rev="e900523"
[patch.'https://github.com/paradigmxyz/evm-inspectors']
revm-inspectors = { git = "https://github.com/paradigmxyz//evm-inspectors", rev="e900523"}
