[package]
name = "libsofl-analysis"
version.workspace = true
authors.workspace = true
description = "Runtime analysis for EVM execution"
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true

alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true

auto_impl.workspace = true
