[package]
name = "libsofl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# revm
revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = [
    "std",
    "secp256k1",
    "serde",
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
], default-features = false }
alloy-primitives = "0.5"
revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = [
    "std",
    "serde",
    "memory_limit",
    "optional_balance_check",
    "optional_block_gas_limit",
    "optional_eip3607",
    "optional_gas_refund",
    "optional_no_base_fee",
], default-features = false }

auto_impl = "1.0"
thiserror = "1.0.40"
derive_more = "0.99.17"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.102"
lazy_static = "1.4.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# test dependencies
mockall = "0.12.0"
