[package]
name = "libsofl-fuzzy"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsofl-core.workspace = true
libsofl-utils.workspace = true
libsofl-reth.workspace = true

revm.workspace = true

libafl = { version = "0.11.2" }
libafl_bolts = { version = "0.11.2" }

alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true

serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true
