[package]
name = "libsofl-jsonrpc"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true

serde.workspace = true
reqwest = "0.11.23"

alloy-providers.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
