[package]
name = "libsofl-knowledge"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "bin/migration/main.rs"

[[bin]]
name = "collect"
path = "bin/collect/main.rs"

[features]
default = []
test-using-jsonrpc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-reth.workspace = true
libsofl-jsonrpc.workspace = true
libsofl-utils.workspace = true

tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true

alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
