[package]
name = "periphery"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-using-jsonrpc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core = { path = "../core" }
libsofl-utils = { path = "../utils" }
libsofl-reth = { path = "../reth" }
libsofl-jsonrpc = { path = "../jsonrpc" }

paste = "1.0.14"
lazy_static = "1.4.0"
ethers = "2.0.11"
alloy-sol-types = "0.5.3"
alloy-sol-macro = { version = "0.5.3", features = ["json"] }
alloy-dyn-abi = "0.5.3"
alloy-json-abi = "0.5.3"
