[package]
name = "periphery"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-using-jsonrpc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true
libsofl-reth.workspace = true
libsofl-jsonrpc.workspace = true

paste = "1.0.14"
lazy_static.workspace = true
ethers = "2.0.11"
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
