[package]
name = "libsofl-periphery"
version.workspace = true
authors.workspace = true
description = "High-level semantic actions for Ethereum smart contracts"
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = []
test-using-jsonrpc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true
libsofl-reth.workspace = true
libsofl-jsonrpc.workspace = true

paste = "1.0.14"
lazy_static.workspace = true
ethers = "2.0.11"
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
