[package]
name = "libsofl-reth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true

serde.workspace = true
lazy_static.workspace = true
tokio.workspace = true

#reth
reth-primitives.workspace = true
reth-db.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-beacon-consensus.workspace = true
reth-blockchain-tree.workspace = true
