[package]
name = "libsofl-reth"
version.workspace = true
authors.workspace = true
description = "Reth DB transport for libsofl"
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true


[[bench]]
name = "performance"
path = "benches/performance/main.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true

serde.workspace = true
lazy_static.workspace = true
tokio.workspace = true

#reth
reth-primitives.workspace = true
reth-db.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-beacon-consensus.workspace = true
reth-blockchain-tree.workspace = true

[dev-dependencies]
criterion = "0.4"
