[package]
name = "libsofl-reth"
version.workspace = true
authors.workspace = true
description = "Reth DB transport for libsofl"
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true


[[bench]]
name = "performance"
path = "benches/performance/main.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true
libsofl-utils.workspace = true

serde.workspace = true
lazy_static.workspace = true
tokio.workspace = true

# reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17", features = [
    "arbitrary",
] }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17", features = [
    "mdbx",
    "test-utils",
] }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17", features = [
    "test-utils",
] }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17" }
reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.17" }

[dev-dependencies]
criterion = "0.4"
