[package]
name = "libsofl-utils"
version.workspace = true
authors.workspace = true
description = "Utilities, logging, configuration, etc. for libsofl"
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libsofl-core.workspace = true

foundry-compilers = { version = "0.2.2", features = ["svm-solc"] }
futures.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
config = "0.13.2"
tempfile = "3.8.1"
tracing.workspace = true
tracing-subscriber.workspace = true

alloy-sol-types.workspace = true
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
