[package]
name = "libsofl-knowledge-base"
version.workspace = true
authors.workspace = true
description = "Historical transaction mining"
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
