[package]
name = "migration"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsofl-core.workspace = true
libsofl-utils.workspace = true
libsofl-knowledge-base.workspace = true
libsofl-knowledge-index.workspace = true
libsofl-knowledge-code.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
